--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='herz.png') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static/favicon', filename='favicon-96x96.png') }}" sizes="96x96" />
+    <!--<link rel="icon" type="image/png" href="{{ url_for('static/favicon', filename='favicon-96x96.png') }}" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="{{ url_for('static/favicon', filename='favicon.svg') }}" />
     <link rel="shortcut icon" href="{{ url_for('static/favicon', filename='favicon.ico') }}" />
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static/favicon', filename='apple-touch-icon.png') }}" />
     <link rel="manifest" href="{{ url_for('static/favicon', filename='site.webmanifest') }}" />
+    -->
     <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -154,7 +155,7 @@
         updateCarousel();
       </script>
     -->
-      
+
                    
 </body>
 </html>
