--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Herz-Cursor & Musik -->
-    <script src="{{ url_for('static', filename='cursor.js') }}"></script>
+    <!--<script src="{{ url_for('static', filename='cursor.js') }}"></script>-->
     <audio id="hochzeitsmusik" autoplay loop hidden>
         <source src="{{ url_for('static', filename='Musik.mp3') }}" type="audio/mpeg">
     </audio>
