--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='herz.png') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static/favicon', filename='favicon-96x96.png') }}" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="{{ url_for('static/favicon', filename='favicon.svg') }}" />
-    <link rel="shortcut icon" href="{{ url_for('static/favicon', filename='favicon.ico') }}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static/favicon', filename='apple-touch-icon.png') }}" />
-    <link rel="manifest" href="{{ url_for('static/favicon', filename='site.webmanifest') }}" />
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon/favicon-96x96.png') }}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon/favicon.svg') }}" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}" />
+    <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}" />
 </head>
 <body>
 
