--- a/app/static/style.css
+++ b/app/static/style.css
@@ -17,6 +17,16 @@ body {
   letter-spacing: 0.5px; /* optisch feiner */
 }
 
+.bisous-top {
+  font-size: 1.8rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-weight: normal;
+  letter-spacing: 1px;
+  font-family: 'Konkhmer Sleokchher', cursive;
+  color: #000; /* oder ein sanftes Grau (#555), wenn es optisch dezenter sein soll */
+}
+
 .hero {
   width: 100%;
   max-width: 800px;
@@ -74,7 +84,7 @@ body {
 }
 
 @keyframes fadeInUp {
-  to {
+  to { 
     opacity: 1;
     transform: translateY(0);
   }
