--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -21,7 +21,8 @@
     <audio id="hochzeitsmusik" autoplay loop hidden>
         <source src="{{ url_for('static', filename='Musik.mp3') }}" type="audio/mpeg">
     </audio>
-
+    <!--Bisous-->
+    <div class="bisous-top">BISOUS</div>
     <!--Hero GIF-->
     <div class="hero">
         <img src="{{ url_for('static', filename='RuG.png') }}" alt="Top Bild">
