--- a/app/static/style.css
+++ b/app/static/style.css
@@ -13,7 +13,7 @@ body {
   flex-direction: column;
   align-items: center;
   font-size: 1rem; 
-  line-height: 1.8; /* für mehr Abstand */
+/*  line-height: 1.8; /* für mehr Abstand */
   letter-spacing: 0.5px; /* optisch feiner */
 }
 
@@ -59,6 +59,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding:0;
+  margin: 0 auto;
   gap: 0.3rem; 
   margin: 1rem 0;
   font-size: 0.95rem; /* vorher: 1.2rem -> zu groß */
