--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -33,17 +33,11 @@
         <p><strong>12.07.2025 &nbsp;&nbsp; 17:00 UHR</strong></p>
         <p><strong>EMBER OFC</strong></p>
     </div>
-    <!-- Trauzeugen -->
+    <!-- RSVP -->
     <div class="section">
-        <h1>TRAUZEUGEN:</h1>
-        <div class="names">
-          <p>GEORG RICHTHOFEN</p>
-          <p>HANNAH WEIDNER</p>
-          <p>JAKOB RICHTER</p>
-          <p>LUCIA BUNNEMANN</p>
-          <p>MARKEIKE MARTIN</p>
-          <p>MARTIN MEUTER</p>
-        </div>
+        <p><strong>EMBER OFC</strong> Wienerstraße 10, Berlin, Germany 10999</p>
+        <a href="#" class="rsvp-button">💌RSVP HERE💌</a>
+        <p>BISOUS</p>
     </div>
     <!-- Geschenke -->
     <div class="section">
@@ -53,11 +47,17 @@
         <p>DIE HOCHZEITSREISE</p>
         <p>DIE LISTE</p>
     </div>
-    <!-- RSVP -->
+    <!-- Trauzeugen -->
     <div class="section">
-        <p><strong>EMBER OFC</strong> Wienerstraße 10, Berlin, Germany 10999</p>
-        <a href="#" class="rsvp-button">RSVP HERE</a>
-        <p>BISOUS</p>
+        <h1>TRAUZEUGEN:</h1>
+        <div class="names">
+            <p>GEORG RICHTHOFEN</p>
+            <p>HANNAH WEIDNER</p>
+            <p>JAKOB RICHTER</p>
+            <p>LUCIA BUNNEMANN</p>
+            <p>MARKEIKE MARTIN</p>
+            <p>MARTIN MEUTER</p>
+        </div>
     </div>
 
 
