--- a/app/static/style.css
+++ b/app/static/style.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   font-family: 'Konkhmer Sleokchher', cursive;
   background-color: #ffffff;
+  background: #FFFFFF;
   color: #000;
   text-align: center;
   display: flex;
@@ -44,7 +45,14 @@ body {
   opacity: 0;
   transform: translateY(40px);
   animation: fadeInUp 0.8s ease-out forwards;
-}
+  font-family: 'Konkhmer Sleokchher';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  color: #000000;
+  }
 .section h1 {
   font-size: 2.5rem;
   letter-spacing: 1px;
@@ -60,9 +68,10 @@ body {
   flex-direction: column;
   align-items: center;
   padding:0;
-  gap: 0.3rem; 
+  /*gap: 0.3rem;*/ 
   margin: 0rem 0;
-  font-size: 0.95rem; /* vorher: 1.2rem -> zu groß */
+  font-size: 15px;
+  line-height: 27px;
   opacity: 0.8; /* etwas transparenter */
 }
 
