--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -35,7 +35,6 @@
     </div>
     <!-- RSVP -->
     <div class="section">
-        <p><strong>EMBER OFC</strong> Wienerstraße 10, Berlin, Germany 10999</p>
         <a href="#" class="rsvp-button">💌RSVP HERE💌</a>
         <p>BISOUS</p>
     </div>
@@ -59,8 +58,9 @@
             <p>MARTIN MEUTER</p>
         </div>
     </div>
-
-
+    <div class="section">
+        <p>EMBER OFC, Wienerstraße 10, Berlin, Germany 10999</p>
+    </div>
 
 <!-- Ort der Trauung – einklappbar 
 <section id="trauung" style="padding: 2rem;">
