--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -22,7 +22,7 @@
         <source src="{{ url_for('static', filename='Musik.mp3') }}" type="audio/mpeg">
     </audio>
     <!--Bisous-->
-    <div class="bisous-top">BISOUS</div>
+    <div class="bisous-top"><strong>BISOUS</strong></div>
     <!--Hero GIF-->
     <div class="hero">
         <img src="{{ url_for('static', filename='RuG.png') }}" alt="Top Bild">
@@ -30,8 +30,8 @@
     <!-- Begrüßung -->
     <div class="section">
         <h1>PLEASE COME CELEBRATE LOVE WITH US.</h1>
-        <p><strong>12.07.2025 &nbsp;&nbsp; 17:00 UHR</strong></p>
-        <p><strong>EMBER OFC</strong></p>
+        <p>12.07.2025 &nbsp;&nbsp; 17:00 UHR</p>
+        <p>EMBER OFC</p>
     </div>
     <!-- RSVP -->
     <div class="section">
@@ -42,7 +42,7 @@
     <div class="section">
         <p>FÜR UNS IST ES DAS GRÖSSTE GESCHENK, MIT DIR ZU FEIERN.</p>
         <p>FALLS DU UNS TROTZDEM ETWAS SCHENKEN MÖCHTEST,</p>
-        <p><strong>FREUEN WIR UNS ÜBER:</strong></p>
+        <p>FREUEN WIR UNS ÜBER:</p>
         <p>DIE HOCHZEITSREISE</p>
         <p>DIE LISTE</p>
     </div>
