--- a/app/static/style.css
+++ b/app/static/style.css
@@ -76,7 +76,7 @@ body {
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 1.4rem;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   padding: 1rem 3rem;
   border-radius: 0;
 }
