--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -36,13 +36,10 @@
     <!-- RSVP -->
     <div class="section">
         <a href="#" class="rsvp-button">💌RSVP HERE💌</a>
-        <p>BISOUS</p>
     </div>
     <!-- Geschenke -->
     <div class="section">
-        <p>FÜR UNS IST ES DAS GRÖSSTE GESCHENK, MIT DIR ZU FEIERN.</p>
-        <p>FALLS DU UNS TROTZDEM ETWAS SCHENKEN MÖCHTEST,</p>
-        <p>FREUEN WIR UNS ÜBER:</p>
+        <p>FÜR UNS IST ES DAS GRÖSSTE GESCHENK, MIT DIR ZU FEIERN. FALLS DU UNS DARÜBER HINNAUS ETWAS SCHENKEN MÖCHTEST, FREUEN WIR UNS ÜBER:</p>
         <p>DIE HOCHZEITSREISE</p>
         <p>DIE LISTE</p>
     </div>
