--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -45,7 +45,7 @@
     </div>
     <!-- Trauzeugen -->
     <div class="section">
-        <h1>TRAUZEUGEN:</h1>
+        <p>TRAUZEUGEN:</p>
         <div class="names">
             <p>GEORG RICHTHOFEN</p>
             <p>HANNAH WEIDNER</p>
