--- a/app/static/style.css
+++ b/app/static/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .section {
-  /*padding: 4rem 2rem;*/
+  padding: 0 0 0 2rem;
   max-width: 600px;
   transform: translateY(40px);
   animation: fadeInUp 0.8s ease-out forwards;
