--- a/app/static/style.css
+++ b/app/static/style.css
@@ -2,7 +2,7 @@ html, body {
   height: 100%;
 }
 body {
-  cursor: url('herz.png'), auto;
+  cursor: url('herzG.png'), auto;
   margin: 0;
   padding: 0;
   font-family: 'Konkhmer Sleokchher', cursive;
