--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -40,8 +40,8 @@
     <!-- Geschenke -->
     <div class="section">
         <p>FÜR UNS IST ES DAS GRÖSSTE GESCHENK, MIT DIR ZU FEIERN. FALLS DU UNS DARÜBER HINNAUS ETWAS SCHENKEN MÖCHTEST, FREUEN WIR UNS ÜBER:</p>
-        <p>DIE HOCHZEITSREISE</p>
-        <p>DIE LISTE</p>
+        <br>DIE HOCHZEITSREISE
+        <br>DIE LISTE
     </div>
     <!-- Trauzeugen -->
     <div class="section">
