--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Untitled</title>
+    <title>Rebecca&Georg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -35,7 +35,7 @@
     </div>
     <!-- RSVP -->
     <div class="section">
-        <a href="#" class="rsvp-button">💌RSVP HERE💌</a>
+        <a href="{{ url_for('antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
     </div>
     <!-- Geschenke -->
     <div class="section">
