--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -35,7 +35,7 @@
     </div>
     <!-- RSVP -->
     <div class="section">
-        <a href="{{ url_for('antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
+        <a href="{{ url_for('main.antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
     </div>
     <!-- Geschenke -->
     <div class="section">
